--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 
 # carpetas de Documentos
 /biometricsystem/server/csv
+/calidad/029/weldbook/server/csv
+
+calidad/029/029.zip
 
 # Compiled output
 /dist
@@ -44,3 +47,4 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
