--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # carpetas de Documentos
 /biometricsystem/server/csv
+/biometricsystem/firmas
 /calidad/029/weldbook/server/csv
 
 calidad/029/029.zip
